--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="/static/styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <title>Bia</title>
 </head>
 
