--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -22,3 +25,4 @@
 
 	</body>
 </html>
+{% endblock %}
