--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -18,4 +21,5 @@
 
 	</body>
 </html>
+{% endblock %}
 
