connecting the dots

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -10,7 +10,9 @@
 	</head>
 	<body>
 	<div align="right">
+        <form action="profile" method="POST">
 			<button class="button1" type="button" title="Profile" align="right">Profile</button>
+        </form>
 			<h1><center>Locations</center></h1>
 		</div>
 		<div>
@@ -21,7 +23,9 @@
 		<br></br>
 		<img alt="South Dining Hall" class=".center" src="https://i.ibb.co/FwMZPWN/OIP-1.jpg"></img>
 	</div>
-	<button class="button2" align="center">DINE NOW</button>
+    <form action="dineNow">
+	    <button class="button2" align="center">DINE NOW</button>
+    </form>
 
 	</body>
 </html>
