--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/png" href="https://i.ibb.co/SdxwqHd/Untitled-design-1-removebg-preview.png"/>
     <link rel="stylesheet" type="text/css" href="/static/styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/main.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
-    <title>Bia</title>
+    <title>Bia: Find a dinner buddy</title>
 </head>
 
 <body>
