add Websocket-based messaging framework

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     {% endblock %}
 
     <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script src="/static/js/messaging.js"></script>
     <script src="/static/js/main.js"></script>
 </body>
 </html>
