--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,19 +7,23 @@
         <form action="profile" method="POST">
 			<button class="button1" type="button" title="Profile" align="right">Profile</button>
         </form>
-			<h1><center>Locations</center></h1>
-		</div>
-		<div>
-			<div>
-				<img alt="North Dining Hall" class=".center" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img>
-				hello
-			</div>
-		<br></br>
-		<img alt="South Dining Hall" class=".center" src="https://i.ibb.co/FwMZPWN/OIP-1.jpg"></img>
 	</div>
-    <form action="dineNow">
-	    <button class="button2" align="center">DINE NOW</button>
-    </form>
+	<h1><center>Locations</center></h1>
+
+	<div id = "main">
+		<div id = "dhCard">
+			<img alt="North Dining Hall" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img>
+			<div>Hello this is more text</div>
+		</div>
+		<br></br>
+		<div id = "dhCard">
+			<div><img alt="South Dining Hall" src="https://i.ibb.co/FwMZPWN/OIP-1.jpg"></img></div>
+			<div>Hello this is text</div>
+		</div>
+		<form action="dineNow">
+			<button class="button2" align="center">DINE NOW</button>
+		</form>
+	</div>
 
 	</body>
 </html>
