--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -8,12 +8,12 @@
 			<button class="button1" type="button" title="Profile" align="right">Profile</button>
         </form>
 	</div>
-	<h1><center>Locations</center></h1>
 
 	<div id = "main">
+		<h1>Locations</h1>
 		<div id = "dhCard">
 			<img alt="North Dining Hall" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img>
-			<div>Hello this is more text</div>
+			<div>text or something</div>
 		</div>
 		<br></br>
 		<div id = "dhCard">
