--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -22,13 +22,18 @@ h1 {
 	font-family:verdana;
 	font-size:200%;
 	color:whitei;
-    text-shadow: 3px 3px #ff0000;
+    text-shadow: 1px 1px #ff0000, -1px 1px #ff0000, -1px -1px #ff0000, 1px -1px #ff0000;
 }
 img {
     margin: 10px 10px 10px 10px;
 	border-radius: 50%;
 	text-align:center;
+    max-width:80%;
 }
+br {
+    display: block;
+    margin: 10px 0;
+ }
 .center {
   display: block;
   margin-left: auto;
@@ -66,11 +71,18 @@ img {
 #dhCard {
     margin: 0 auto;
     max-width: 75%;
-	min-width: 27em;
 	background: #ffffff;
 	border-radius: 20px;
     margin: auto;
-    flex-wrap: wrap;
-    justify-content: center;
-    display: flex;
+}
+
+.column {
+    float: left;
+    width: 50%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
