--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -20,7 +20,7 @@ div {
 h1 {
 	font-family:verdana;
 	font-size:200%;
-	color:whitei;
+	color:white;
     text-shadow: 1px 1px #ff0000, -1px 1px #ff0000, -1px -1px #ff0000, 1px -1px #ff0000;
 }
 img {
