--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,8 +4,8 @@
 <html>
 	<body>
 	<div id = "main">
-		<form action="profile" method="POST">
-			<button class="button1" type="button" title="Profile" align="right">Profile</button>
+		<form action="profile">
+			<button class="button1" align="right">Profile</button>
 		</form>
 		<h1>Locations</h1>
 		<div id = "dhCard">
