--- a/templates/preference_page.html
+++ b/templates/preference_page.html
@@ -1,11 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width,initial-scale=1"/>
-		<title>Bia: Preferences</title>
-		<link rel="icon" type="image/png" href="https://i.ibb.co/SdxwqHd/Untitled-design-1-removebg-preview.png"/>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
+    <body>
 		<h1><center>Preferences</center></h1>
 		<div>
 			<p><center>Dining Hall</center></p>
@@ -30,4 +27,4 @@
 
 	</body>
 </html>
-
+{% endblock %}
