--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -12,11 +12,18 @@
 		<h1><center>Profile</center></h1>
 		<div>
 			<div>
-				<img alt="North Dining Hall" class=".center" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img>
+                <img alt="{{ name }}'s profile picture" class=".center" src="{{ imgSource }}"></img>
 			</div>
-			<h1>Name</h1>
-			<p>Description</p>
-	</div>
+            <h1>{{ name  }}</h1>
+            <p>Groups: {{ groups }}</p>
+	    </div>
+        <div id="groupSearch">
+            
+            <form name="groupSearch_form"> 
+                <label for="groupQuery">Search groups:</label>
+                <input type="text" name="groups" class="field">
+            </form>
+        </div>
 	<button class="button2" align="center">Log Out</button>
 
 	</body>
