--- a/templates/dineNow.html
+++ b/templates/dineNow.html
@@ -1,7 +1,192 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+ /* Customize the label (the container) */
+ .container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background:rgb(221, 221, 221);
+  padding: 20px;
+  color: black;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  height: 25px;
+  width: 25px;
+  background-color: rgb(148, 148, 148);
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+} 
+</style>
 <html>
     <h1>Dine Now page</h1>
 </html>
+  <div class="card-wrapper">
+
+    <div class="card">
+
+      <h1 class="center">Available Parties</h1>
+      
+      <div id="parties">
+        <button id="parties_random" style="width: 100%">
+            <h2>Join Random Party</h2>
+        </button>
+      </div>
+      
+      
+    </div>
+
+    <div class="card">
+
+      <h1 class="center">Create Party</h1>
+
+      <form name="create_party" id="create_party">
+
+        <label class="container" id="make_public"> Public
+            <input type="checkbox">
+            <span class="checkmark"></span>
+        </label>
+
+        <label id="add_groups">Add Groups</label>
+
+        <input type="submit" value="Create Group" class="btn">
+      
+      </form>
+      
+    </div>
+  
+  </div>
+<script>
+var parties = [];
+var groups = [];
+
+function ajaxOnSuccess(endpoint, func) {
+    $.ajax({
+        url: endpoint,
+        type: "POST",
+        data: '',
+        dataType: "json",
+        success: function(resp) {
+            func(resp);
+        },
+        error: function(resp) {
+            console.log(resp, 'fail');
+        }
+    });
+}
+
+ajaxOnSuccess('/user/get_parties', function(resp) {
+    parties = resp;
+    for (var i = 0; i < parties.length; i++) {
+        var party = parties[i];
+
+        var button = document.createElement('button');
+
+        var partyLoc = party.location;
+
+        button.innerHTML = "<h2>Party with " + party.n_members + " member(s)<h2>";
+        button.style.width = "100%";
+        button.style.marginTop = "10px";
+
+
+        document.getElementById('parties').appendChild(button)
+    }
+});
+
+ajaxOnSuccess('/user/getGroups', function(groups) {
+    for (var i = 0; i < groups.length; i++) {
+        var group = groups[i];
+
+        var groupElem = document.createElement('label');
+        groupElem.classList.add("container");
+        groupElem.innerHTML = group.name
+        + ` <input type="checkbox">
+            <span class="checkmark"></span>
+        </label>`;
+        groupElem.id = group.group_id;
+
+        var refNode = document.getElementById('add_groups');
+        refNode.parentNode.insertBefore(groupElem, refNode.nextSibling);
+    }
+});
+
+$("form[name=create_party]").submit(function(e) {
+
+    e.preventDefault();
+    e.stopImmediatePropagation();
+
+    var data = $form.serialize();
+    console.log('go!');
+
+    $.ajax({
+        url: "/user/create_party",
+        type: "POST",
+        data: data,
+        dataType: "json",
+        success: function(resp) {
+            e.preventDefault();
+        },
+        error: function(resp) {
+            e.preventDefault();
+        }
+    });
+});
+
+</script>
+
 {% endblock %}
