--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,19 +7,29 @@
 		<form action="profile">
 			<button class="button1" align="right">Profile</button>
 		</form>
-		<h1>Locations</h1>
+		<h1>Bia: Find a dinner buddy</h1>
 		<div id = "dhCard" class="row">
 			<div class="column"><img alt="North Dining Hall" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img></div>
-			<div class="column">text or something</div>
+			<div class="column">
+				<h2>North Dining Hall</h2>
+				<p>
+
+				</p>
+			</div>
 		</div>
 		<br></br>
 		<div id = "dhCard" class="row">
 			<div class="column"><img alt="South Dining Hall" src="https://i.ibb.co/FwMZPWN/OIP-1.jpg"></img></div>
-			<div class="column">Hello this is text</div>
+			<div class="column">
+				<h2>South Dining Hall</h2>
+				<p>Hours today:</p>
+				<p>Hour1-Hour2</p>
+				<p>Hour3-Hour4</p>
+			</div>
 		</div>
 		<br></br>
 		<form action="dineNow">
-			<button class="button2" align="center">DINE NOW</button>
+			<button class="button2" align="center">Dine Now</button>
 		</form>
 	</div>
 
