--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,9 +12,10 @@
 			<div class="column"><img alt="North Dining Hall" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img></div>
 			<div class="column">
 				<h2>North Dining Hall</h2>
-				<p>
-
-				</p>
+				<h3>Hours today:</h3>
+				<p>Breakfast 7:00 am – 10:00 am</p>
+				<p>Lunch 11:00 am – 2:30 pm</p>
+				<p>Dinner 4:30 pm – 7:30 pm</p>
 			</div>
 		</div>
 		<br></br>
@@ -22,9 +23,10 @@
 			<div class="column"><img alt="South Dining Hall" src="https://i.ibb.co/FwMZPWN/OIP-1.jpg"></img></div>
 			<div class="column">
 				<h2>South Dining Hall</h2>
-				<p>Hours today:</p>
-				<p>Hour1-Hour2</p>
-				<p>Hour3-Hour4</p>
+				<h3>Hours today:</h3>
+				<p>Breakfast 7:00 am – 10:00 am</p>
+				<p>Lunch 11:00 am – 2:30 pm</p>
+				<p>Dinner 4:30 pm – 7:30 pm</p>
 			</div>
 		</div>
 		<br></br>
