--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -61,12 +61,13 @@ br {
 .button1 {
      z-index: 1000;
      line-height: 12px;
-     font-size: 8pt;
+     font-size: 30pt;
      font-family: Sans-serif;
      position:absolute;
-     top:0;
-     right:0;
-     border-radius:10px;
+     top:10px;
+     right:10px;
+     background-color: transparent;
+     border: none;
  }
  .button2 {
      z-index: 1000;
