--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/main.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/font-awesome.min.css">
     <title>Bia: Find a dinner buddy</title>
     <script type="text/javascript" src="/static/js/jquery.js"></script>
 </head>
