--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,7 +5,7 @@
 	<body>
 	<div id = "main">
 		<form action="profile">
-			<button class="button1" align="right">Profile</button>
+			<button class="button1" align="right"><i class="fa fa-user-circle" aria-hidden="true"></i></button>
 		</form>
 		<h1>Bia: Find a dinner buddy</h1>
 		<div id = "dhCard" class="row">
