--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -6,7 +6,7 @@
 
     </script>
 	<form action="/">
-		<button class="button1" align="left">Back</button>
+		<button class="button1" align="left"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
 	</form>
 	<body id="main">
 		<div id ="profileCard">
@@ -17,7 +17,7 @@
 				</div>
 				<h1>{{ name  }}</h1>
 				<p>{{ groups }}</p>
-			</div>;
+			</div>
 			<div id="groupSearch">
                     <input type='text' onchange="getGroups(this.value);" ();" />
 
