--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+    <a href="/"><img class="logo" align="left" src="/static/bia.png" href="/"></a>
     {% block content %}
         {# Template inserted here #}
     {% endblock %}
