--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,7 +7,8 @@
 		<form action="profile">
 			<button class="button1" align="right"><i class="fa fa-user-circle" aria-hidden="true"></i></button>
 		</form>
-		<h1>Bia: Find a dinner buddy</h1>
+		
+		<h1></img>Bia: Find a dinner buddy</h1>
 		<div id = "dhCard" class="row">
 			<div class="column"><img alt="North Dining Hall" src="https://i.ibb.co/pwPZrGs/OIP.jpg"></img></div>
 			<div class="column">
@@ -16,6 +17,8 @@
 				<p>Breakfast 7:00 am – 10:00 am</p>
 				<p>Lunch 11:00 am – 2:30 pm</p>
 				<p>Dinner 4:30 pm – 7:30 pm</p>
+				<br></br>
+				<a href="http://nutrition.nd.edu/NetNutrition/1"><button class="button2" align="center">Menu</button></a>
 			</div>
 		</div>
 		<br></br>
@@ -27,6 +30,8 @@
 				<p>Breakfast 7:00 am – 10:00 am</p>
 				<p>Lunch 11:00 am – 2:30 pm</p>
 				<p>Dinner 4:30 pm – 7:30 pm</p>
+				<br></br>
+				<a href="http://nutrition.nd.edu/NetNutrition/1"><button class="button2" align="center">Menu</button></a>
 			</div>
 		</div>
 		<br></br>
