--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -6,14 +6,15 @@
 
     </script>
 	<form action="/">
-		<button class="button1" align="left"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+		<button class="button1" align="right"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
 	</form>
 	<body id="main">
+		<h1><center>Profile</center></h1>
 		<div id ="profileCard">
-			<h1><center>Profile</center></h1>
 			<div>
 				<div>
-					<img alt="{{ name }}'s profile picture" class=".center" src="{{ imgSource }}"></img>
+					<!--<img alt="{{ name }}'s profile picture" class=".center" src="{{ imgSource }}"></img>-->
+					<img class="profilePic" src="/static/bia.png"></img>
 				</div>
 				<h1>{{ name  }}</h1>
 				<p>{{ groups }}</p>
