--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -75,6 +75,14 @@ br {
     margin: auto;
 }
 
+.anyCard {
+    margin: 0 auto;
+    max-width: 75%;
+	background: #ffffff;
+	border-radius: 20px;
+    margin: auto;
+}
+
 .column {
     float: left;
     width: 50%;
