--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <title>Bia: Find a dinner buddy</title>
     <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/messaging.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,6 @@
     {% endblock %}
 
 </body>
-<script src="/static/js/messaging.js"></script>
 <script src="/static/js/main.js"></script>
 </html>
 
