--- a/templates/dineNow.html
+++ b/templates/dineNow.html
@@ -74,53 +74,54 @@
 } 
 </style>
 <html>
-    <center><h1>Dine Now page</h1></center>
+    <center><h1>Dine Now</h1></center>
 </html>
-  <div class="card-wrapper" id='setup-party'>
-    <div class="card">
-      <h1 class="center">Available Parties</h1>
-      
-      <div id="parties">
-        <button id="parties-random" style="width: 100%">
-            <h2>Join Random Party</h2>
-        </button>
-      </div>
+    <div class="card-wrapper" id='setup-party'>
+        <div class="card">
+            <h1 class="center">Available Parties</h1>
+            
+            <div id="parties">
+                <button id="parties-random" style="width: 100%">
+                    <h2>Join Random Party</h2>
+                </button>
+            </div>
+        </div>
+
+        <div class="card">
+            <h1 class="center">Create Party</h1>
+            <form name="create_party" id="create_party">
+                
+                <input id="party-name-entry" type="text" name="name" class="field"
+                placeholder="Name (optional)" style="margin-bottom: 10px;">
+
+                <select name="location" class="field" id="select-location"
+                    style="width: 100%; margin-bottom: 10px;">
+                    <option value="NDH">NDH</option>
+                    <option value="SDH">SDH</option>
+                </select>
+
+                <label class="container"> Public
+                    <input type="checkbox" id="make_public">
+                    <span class="checkmark"></span>
+                </label>
+
+                <label class="container"> Auto Accept
+                    <input type="checkbox" id="auto_join">
+                    <span class="checkmark"></span>
+                </label>
+
+                <div id='create-party-groups'>
+                    <label id="add_groups">Add Groups</label>
+                </div>
+
+                <input type="submit" value="Create Party" class="btn">
+            </form>
+        </div>
     </div>
 
-    <div class="card">
-      <h1 class="center">Create Party</h1>
-      <form name="create_party" id="create_party">
-          
-        <input id="party-name-entry" type="text" name="name" class="field"
-        placeholder="Name (optional)" style="margin-bottom: 10px;">
-
-        <select name="location" class="field" id="select-location"
-            style="width: 100%; margin-bottom: 10px;">
-            <option value="NDH">NDH</option>
-            <option value="SDH">SDH</option>
-        </select>
-
-        <label class="container"> Public
-            <input type="checkbox" id="make_public">
-            <span class="checkmark"></span>
-        </label>
-
-        <label class="container"> Auto Accept
-            <input type="checkbox" id="auto_join">
-            <span class="checkmark"></span>
-        </label>
-
-        <label id="add_groups">Add Groups</label>
-
-        <input type="submit" value="Create Party" class="btn">
-      
-      </form>
+    <div id='wait-on-party' style="display: none">
+        <h1 id='wait-on-party-title'></h1>
     </div>
-  </div>
-
-  <div id='wait-on-party' style="display: none">
-    <h1 id='wait-on-party-title'></h1>
-  </div>
 
     <div id='manage-party' style="display: none">
         <h1 id='manage-party-title'>Managing Party</h1>
@@ -257,11 +258,43 @@ function addPartyInfo(party) {
     button.id = party.party_id;
     button.onclick = (e) => {
         var partyId = e.target.id;
+        if (partyId == "") {
+            partyId = e.target.parentNode.id;
+        }
         selectedParty = partyId;
         attemptJoinParty(partyId);
     }
 
     document.getElementById('parties').appendChild(button);
+}
+
+function createParty(public, autoJoin, location, name, groupIds) {
+    var data = "public=" + public;
+    data += "&auto_join=" + autoJoin;
+    data += "&location=" + location;
+    data += "&name=" + name;
+    for (var i = 0; i < groupIds.length; i++) {
+        data += "&" + groupIds[i] + "=true"
+    }
+
+    $.ajax({
+        url: "/user/create_party",
+        type: "POST",
+        data: data,
+        dataType: "json",
+        success: function(resp) {
+            if (resp.result == 'success') {
+                partyName_ = name;
+                selectedParty = resp.party_id;
+                partyOwner = true;
+                manageParty(resp.party_id);
+            }
+            e.preventDefault();
+        },
+        error: function(resp) {
+            e.preventDefault();
+        }
+    });
 }
 
 ajaxOnSuccess('/user/get_parties', function(resp) {
@@ -290,47 +323,38 @@ ajaxOnSuccess('/user/getGroups', function(resp) {
 });
 
 $("form[name=create_party").submit(function(e) {
-
     e.preventDefault();
     e.stopImmediatePropagation();
 
-
-    var data = "public=" + document.getElementById('make_public').checked;
-    data += "&auto_join=" + document.getElementById('auto_join').checked;
-
+    var public = document.getElementById('make_public').checked;
+    var autoJoin = document.getElementById('auto_join').checked;
     var location = document.getElementById('select-location').value;
-    data += "&location=" + location;
 
-    var partyName_ = document.getElementById('party-name-entry').value;
-    if (partyName_ == "") {
-        partyName_ = "Party"
+    var name = document.getElementById('party-name-entry').value;
+    if (name == "") {
+        name = "Party"
     }
-    data += "&name=" + partyName_;
 
+    var groupIds = [];
     for (var i = 0; i < groups.length; i++) {
-        if (document.getElementById(groups[i].group_id).value == "on") {
-            data += "&" + groups[i].group_id + "=true";
+        if (document.getElementById(groups[i].group_id).checked) {
+            groupIds.push(groups[i].group_id);
         }
     }
 
-    $.ajax({
-        url: "/user/create_party",
-        type: "POST",
-        data: data,
-        dataType: "json",
-        success: function(resp) {
-            if (resp.result == 'success') {
-                partyName = partyName_;
-                selectedParty = resp.party_id;
-                partyOwner = true;
-                manageParty(resp.party_id);
-            }
-            e.preventDefault();
-        },
-        error: function(resp) {
-            e.preventDefault();
-        }
-    });
+    createParty(public, autoJoin, location, name, groupIds);
+});
+
+document.getElementById('make_public').addEventListener('click', () => {
+    var public = document.getElementById('make_public').checked;
+
+    var partyGroups = document.getElementById('create-party-groups');
+    if (public) {
+        partyGroups.style.display = "none";
+    }
+    else {
+        partyGroups.style.display = "inherit";
+    }
 });
 
 document.getElementById('parties-random').onclick = () => {
@@ -341,7 +365,9 @@ document.getElementById('parties-random').onclick = () => {
         attemptJoinParty(partyId);
     }
     else {
-        // Do nothing; could try to create party
+        var locations = ["NDH", "SDH"]
+        var location = locations[Math.floor(Math.random() * 2)]
+        createParty(true, true, location, "Party", []);
     }
 }
 
@@ -383,6 +409,7 @@ registerListener('party_request', (info) => {
 
 registerListener('party_accept', (info) => {
     document.getElementById('wait-on-party').style.display = "none";
+    document.getElementById('wait-on-party-title').style.display = "none";
     document.getElementById('party-joined').style.display = "inherit";
 
     var title = document.getElementById('party-joined-title');
@@ -464,6 +491,16 @@ registerListener('party_chat', (info) => {
 
     before1.parentNode.insertBefore(blurb1, before1.nextSibling);
     before2.parentNode.insertBefore(blurb2, before2.nextSibling);
+});
+
+registerListener('party_leave', (info) => {
+    console.log(info);
+    if (selectedParty) {
+        window.location.href = "/dineNow";
+    }
+    else {
+        document.getElementById(info.party_id).remove();
+    }
 });
 
 </script>
