--- a/templates/dineNow.html
+++ b/templates/dineNow.html
@@ -474,6 +474,7 @@ registerListener('party_chat', (info) => {
         blurb2.style.background = "#D0D0D0";
         blurb2.style.float = "right";
         blurb2.style.textAlign = "right";
+        blurb2.innerHTML += "Me";
     }
     else {
         blurb1.style.background = "#D0D0FF";
